resources/windows/y.output
Terminals unused in grammar

   OP_LOG_NOT


Rules useless in parser due to conflicts

   35 expresion: expresion OP_SUMA termino
   36          | expresion OP_RESTA termino

   38 termino: termino OP_DIV factor
   39        | termino OP_MUL factor

   48 variables: TOKEN_ID


Estado 36 conflictos: 8 desplazamiento(s)/reducción(ones)
Estado 37 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 42 conflictos: 2 desplazamiento/reducción, 11 reducción/reducción
Estado 46 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 48 conflictos: 2 desplazamiento/reducción, 5 reducción/reducción
Estado 71 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 72 conflictos: 2 desplazamiento/reducción, 27 reducción/reducción
Estado 73 conflictos: 2 desplazamiento/reducción, 27 reducción/reducción
Estado 74 conflictos: 2 desplazamiento/reducción, 5 reducción/reducción
Estado 75 conflictos: 27 reducción(ones)/reducción(ones)
Estado 76 conflictos: 27 reducción(ones)/reducción(ones)
Estado 90 conflictos: 3 desplazamiento/reducción, 1 reducción/reducción
Estado 95 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: pgm $end

    1 pgm: programa

    2 programa: PR_MAIN PR_DIM declaracion_variables PR_ENDIM lista_sentencias
    3         | PR_MAIN lista_sentencias
    4         | sentencia lista_sentencias
    5         | sentencia

    6 lista_sentencias: sentencia
    7                 | sentencia lista_sentencias

    8 sentencia: condicional
    9          | asignacion
   10          | iteracion
   11          | io
   12          | iguales
   13          | filter

   14 iguales: PR_IGUALES PAR_ABRE expresion COMA COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA

   15 lista_expresiones: expresion COMA lista_expresiones
   16                  | expresion

   17 filter: PR_FILTER PAR_ABRE condicion COMA COR_ABRE lista_variables COR_CIERRA PAR_CIERRA

   18 lista_variables: TOKEN_ID COMA lista_variables
   19                | TOKEN_ID

   20 io: entrada
   21   | salida

   22 entrada: PR_READ TOKEN_ID

   23 salida: PR_WRITE TOKEN_ID
   24       | PR_WRITE CONST_STR

   25 condicional: PR_IF condicion PR_THEN lista_sentencias PR_ENDIF
   26            | PR_IF condicion PR_THEN lista_sentencias PR_ELSE lista_sentencias PR_ENDIF

   27 condicion: comparacion
   28          | comparacion OP_LOG_AND comparacion
   29          | comparacion OP_LOG_OR comparacion

   30 comparacion: expresion comparador expresion
   31            | PR_NOT expresion

   32 iteracion: PR_WHILE condicion PR_BEGIN lista_sentencias PR_END

   33 asignacion: TOKEN_ID OP_IGUAL expresion

   34 expresion: termino
   35          | expresion OP_SUMA termino
   36          | expresion OP_RESTA termino

   37 termino: factor
   38        | termino OP_DIV factor
   39        | termino OP_MUL factor

   40 factor: CONST_STR
   41       | CONST_INT
   42       | CONST_FLOAT
   43       | TOKEN_ID
   44       | expresion

   45 declaracion_variables: OP_DIM COR_ABRE lista_variables_tipos COR_CIERRA

   46 lista_variables_tipos: TOKEN_ID COR_CIERRA OP_AS COR_ABRE tipo_dato
   47                      | TOKEN_ID COMA variables COMA tipo_dato

   48 variables: TOKEN_ID
   49          | TOKEN_ID COMA variables

   50 tipo_dato: PR_INT
   51          | PR_FLOAT
   52          | PR_STRING

   53 comparador: OP_MAYOR
   54           | OP_MENOR
   55           | OP_MENOR_IGUAL
   56           | OP_MAYOR_IGUAL
   57           | OP_IGUAL_IGUAL
   58           | OP_DISTINTO


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
TOKEN_ID (258) 18 19 22 23 33 43 46 47 48 49
CONST_INT (259) 41
CONST_STR (260) 24 40
CONST_FLOAT (261) 42
PR_MAIN (262) 2 3
PR_DIM (263) 2
PR_ENDIM (264) 2
PR_IGUALES (265) 14
PR_FILTER (266) 17
PR_WRITE (267) 23 24
PR_READ (268) 22
PR_IF (269) 25 26
PR_THEN (270) 25 26
PR_ENDIF (271) 25 26
PR_ELSE (272) 26
PR_NOT (273) 31
PR_WHILE (274) 32
PR_BEGIN (275) 32
PR_END (276) 32
PAR_ABRE (277) 14 17
PAR_CIERRA (278) 14 17
COR_ABRE (279) 14 17 45 46
COR_CIERRA (280) 14 17 45 46
COMA (281) 14 15 17 18 47 49
OP_LOG_AND (282) 28
OP_LOG_OR (283) 29
OP_LOG_NOT (284)
OP_SUMA (285) 35
OP_RESTA (286) 36
OP_MUL (287) 39
OP_DIV (288) 38
OP_MAYOR (289) 53
OP_MAYOR_IGUAL (290) 56
OP_MENOR (291) 54
OP_MENOR_IGUAL (292) 55
OP_DISTINTO (293) 58
OP_IGUAL_IGUAL (294) 57
OP_IGUAL (295) 33
OP_AS (296) 46
OP_DIM (297) 45
PR_FLOAT (298) 51
PR_INT (299) 50
PR_STRING (300) 52


No terminales con las reglas donde aparecen

$accept (46)
    en la izquierda: 0
pgm (47)
    en la izquierda: 1, en la derecha: 0
programa (48)
    en la izquierda: 2 3 4 5, en la derecha: 1
lista_sentencias (49)
    en la izquierda: 6 7, en la derecha: 2 3 4 7 25 26 32
sentencia (50)
    en la izquierda: 8 9 10 11 12 13, en la derecha: 4 5 6 7
iguales (51)
    en la izquierda: 14, en la derecha: 12
lista_expresiones (52)
    en la izquierda: 15 16, en la derecha: 14 15
filter (53)
    en la izquierda: 17, en la derecha: 13
lista_variables (54)
    en la izquierda: 18 19, en la derecha: 17 18
io (55)
    en la izquierda: 20 21, en la derecha: 11
entrada (56)
    en la izquierda: 22, en la derecha: 20
salida (57)
    en la izquierda: 23 24, en la derecha: 21
condicional (58)
    en la izquierda: 25 26, en la derecha: 8
condicion (59)
    en la izquierda: 27 28 29, en la derecha: 17 25 26 32
comparacion (60)
    en la izquierda: 30 31, en la derecha: 27 28 29
iteracion (61)
    en la izquierda: 32, en la derecha: 10
asignacion (62)
    en la izquierda: 33, en la derecha: 9
expresion (63)
    en la izquierda: 34 35 36, en la derecha: 14 15 16 30 31 33 35
    36 44
termino (64)
    en la izquierda: 37 38 39, en la derecha: 34 35 36 38 39
factor (65)
    en la izquierda: 40 41 42 43 44, en la derecha: 37 38 39
declaracion_variables (66)
    en la izquierda: 45, en la derecha: 2
lista_variables_tipos (67)
    en la izquierda: 46 47, en la derecha: 45
variables (68)
    en la izquierda: 48 49, en la derecha: 47 49
tipo_dato (69)
    en la izquierda: 50 51 52, en la derecha: 46 47
comparador (70)
    en la izquierda: 53 54 55 56 57 58, en la derecha: 30


estado 0

    0 $accept: . pgm $end

    TOKEN_ID    desplazar e ir al estado 1
    PR_MAIN     desplazar e ir al estado 2
    PR_IGUALES  desplazar e ir al estado 3
    PR_FILTER   desplazar e ir al estado 4
    PR_WRITE    desplazar e ir al estado 5
    PR_READ     desplazar e ir al estado 6
    PR_IF       desplazar e ir al estado 7
    PR_WHILE    desplazar e ir al estado 8

    pgm          ir al estado 9
    programa     ir al estado 10
    sentencia    ir al estado 11
    iguales      ir al estado 12
    filter       ir al estado 13
    io           ir al estado 14
    entrada      ir al estado 15
    salida       ir al estado 16
    condicional  ir al estado 17
    iteracion    ir al estado 18
    asignacion   ir al estado 19


estado 1

   33 asignacion: TOKEN_ID . OP_IGUAL expresion

    OP_IGUAL  desplazar e ir al estado 20


estado 2

    2 programa: PR_MAIN . PR_DIM declaracion_variables PR_ENDIM lista_sentencias
    3         | PR_MAIN . lista_sentencias

    TOKEN_ID    desplazar e ir al estado 1
    PR_DIM      desplazar e ir al estado 21
    PR_IGUALES  desplazar e ir al estado 3
    PR_FILTER   desplazar e ir al estado 4
    PR_WRITE    desplazar e ir al estado 5
    PR_READ     desplazar e ir al estado 6
    PR_IF       desplazar e ir al estado 7
    PR_WHILE    desplazar e ir al estado 8

    lista_sentencias  ir al estado 22
    sentencia         ir al estado 23
    iguales           ir al estado 12
    filter            ir al estado 13
    io                ir al estado 14
    entrada           ir al estado 15
    salida            ir al estado 16
    condicional       ir al estado 17
    iteracion         ir al estado 18
    asignacion        ir al estado 19


estado 3

   14 iguales: PR_IGUALES . PAR_ABRE expresion COMA COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA

    PAR_ABRE  desplazar e ir al estado 24


estado 4

   17 filter: PR_FILTER . PAR_ABRE condicion COMA COR_ABRE lista_variables COR_CIERRA PAR_CIERRA

    PAR_ABRE  desplazar e ir al estado 25


estado 5

   23 salida: PR_WRITE . TOKEN_ID
   24       | PR_WRITE . CONST_STR

    TOKEN_ID   desplazar e ir al estado 26
    CONST_STR  desplazar e ir al estado 27


estado 6

   22 entrada: PR_READ . TOKEN_ID

    TOKEN_ID  desplazar e ir al estado 28


estado 7

   25 condicional: PR_IF . condicion PR_THEN lista_sentencias PR_ENDIF
   26            | PR_IF . condicion PR_THEN lista_sentencias PR_ELSE lista_sentencias PR_ENDIF

    TOKEN_ID     desplazar e ir al estado 29
    CONST_INT    desplazar e ir al estado 30
    CONST_STR    desplazar e ir al estado 31
    CONST_FLOAT  desplazar e ir al estado 32
    PR_NOT       desplazar e ir al estado 33

    condicion    ir al estado 34
    comparacion  ir al estado 35
    expresion    ir al estado 36
    termino      ir al estado 37
    factor       ir al estado 38


estado 8

   32 iteracion: PR_WHILE . condicion PR_BEGIN lista_sentencias PR_END

    TOKEN_ID     desplazar e ir al estado 29
    CONST_INT    desplazar e ir al estado 30
    CONST_STR    desplazar e ir al estado 31
    CONST_FLOAT  desplazar e ir al estado 32
    PR_NOT       desplazar e ir al estado 33

    condicion    ir al estado 39
    comparacion  ir al estado 35
    expresion    ir al estado 36
    termino      ir al estado 37
    factor       ir al estado 38


estado 9

    0 $accept: pgm . $end

    $end  desplazar e ir al estado 40


estado 10

    1 pgm: programa .

    $default  reduce usando la regla 1 (pgm)


estado 11

    4 programa: sentencia . lista_sentencias
    5         | sentencia .

    TOKEN_ID    desplazar e ir al estado 1
    PR_IGUALES  desplazar e ir al estado 3
    PR_FILTER   desplazar e ir al estado 4
    PR_WRITE    desplazar e ir al estado 5
    PR_READ     desplazar e ir al estado 6
    PR_IF       desplazar e ir al estado 7
    PR_WHILE    desplazar e ir al estado 8

    $default  reduce usando la regla 5 (programa)

    lista_sentencias  ir al estado 41
    sentencia         ir al estado 23
    iguales           ir al estado 12
    filter            ir al estado 13
    io                ir al estado 14
    entrada           ir al estado 15
    salida            ir al estado 16
    condicional       ir al estado 17
    iteracion         ir al estado 18
    asignacion        ir al estado 19


estado 12

   12 sentencia: iguales .

    $default  reduce usando la regla 12 (sentencia)


estado 13

   13 sentencia: filter .

    $default  reduce usando la regla 13 (sentencia)


estado 14

   11 sentencia: io .

    $default  reduce usando la regla 11 (sentencia)


estado 15

   20 io: entrada .

    $default  reduce usando la regla 20 (io)


estado 16

   21 io: salida .

    $default  reduce usando la regla 21 (io)


estado 17

    8 sentencia: condicional .

    $default  reduce usando la regla 8 (sentencia)


estado 18

   10 sentencia: iteracion .

    $default  reduce usando la regla 10 (sentencia)


estado 19

    9 sentencia: asignacion .

    $default  reduce usando la regla 9 (sentencia)


estado 20

   33 asignacion: TOKEN_ID OP_IGUAL . expresion

    TOKEN_ID     desplazar e ir al estado 29
    CONST_INT    desplazar e ir al estado 30
    CONST_STR    desplazar e ir al estado 31
    CONST_FLOAT  desplazar e ir al estado 32

    expresion  ir al estado 42
    termino    ir al estado 37
    factor     ir al estado 38


estado 21

    2 programa: PR_MAIN PR_DIM . declaracion_variables PR_ENDIM lista_sentencias

    OP_DIM  desplazar e ir al estado 43

    declaracion_variables  ir al estado 44


estado 22

    3 programa: PR_MAIN lista_sentencias .

    $default  reduce usando la regla 3 (programa)


estado 23

    6 lista_sentencias: sentencia .
    7                 | sentencia . lista_sentencias

    TOKEN_ID    desplazar e ir al estado 1
    PR_IGUALES  desplazar e ir al estado 3
    PR_FILTER   desplazar e ir al estado 4
    PR_WRITE    desplazar e ir al estado 5
    PR_READ     desplazar e ir al estado 6
    PR_IF       desplazar e ir al estado 7
    PR_WHILE    desplazar e ir al estado 8

    $default  reduce usando la regla 6 (lista_sentencias)

    lista_sentencias  ir al estado 45
    sentencia         ir al estado 23
    iguales           ir al estado 12
    filter            ir al estado 13
    io                ir al estado 14
    entrada           ir al estado 15
    salida            ir al estado 16
    condicional       ir al estado 17
    iteracion         ir al estado 18
    asignacion        ir al estado 19


estado 24

   14 iguales: PR_IGUALES PAR_ABRE . expresion COMA COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA

    TOKEN_ID     desplazar e ir al estado 29
    CONST_INT    desplazar e ir al estado 30
    CONST_STR    desplazar e ir al estado 31
    CONST_FLOAT  desplazar e ir al estado 32

    expresion  ir al estado 46
    termino    ir al estado 37
    factor     ir al estado 38


estado 25

   17 filter: PR_FILTER PAR_ABRE . condicion COMA COR_ABRE lista_variables COR_CIERRA PAR_CIERRA

    TOKEN_ID     desplazar e ir al estado 29
    CONST_INT    desplazar e ir al estado 30
    CONST_STR    desplazar e ir al estado 31
    CONST_FLOAT  desplazar e ir al estado 32
    PR_NOT       desplazar e ir al estado 33

    condicion    ir al estado 47
    comparacion  ir al estado 35
    expresion    ir al estado 36
    termino      ir al estado 37
    factor       ir al estado 38


estado 26

   23 salida: PR_WRITE TOKEN_ID .

    $default  reduce usando la regla 23 (salida)


estado 27

   24 salida: PR_WRITE CONST_STR .

    $default  reduce usando la regla 24 (salida)


estado 28

   22 entrada: PR_READ TOKEN_ID .

    $default  reduce usando la regla 22 (entrada)


estado 29

   43 factor: TOKEN_ID .

    $default  reduce usando la regla 43 (factor)


estado 30

   41 factor: CONST_INT .

    $default  reduce usando la regla 41 (factor)


estado 31

   40 factor: CONST_STR .

    $default  reduce usando la regla 40 (factor)


estado 32

   42 factor: CONST_FLOAT .

    $default  reduce usando la regla 42 (factor)


estado 33

   31 comparacion: PR_NOT . expresion

    TOKEN_ID     desplazar e ir al estado 29
    CONST_INT    desplazar e ir al estado 30
    CONST_STR    desplazar e ir al estado 31
    CONST_FLOAT  desplazar e ir al estado 32

    expresion  ir al estado 48
    termino    ir al estado 37
    factor     ir al estado 38


estado 34

   25 condicional: PR_IF condicion . PR_THEN lista_sentencias PR_ENDIF
   26            | PR_IF condicion . PR_THEN lista_sentencias PR_ELSE lista_sentencias PR_ENDIF

    PR_THEN  desplazar e ir al estado 49


estado 35

   27 condicion: comparacion .
   28          | comparacion . OP_LOG_AND comparacion
   29          | comparacion . OP_LOG_OR comparacion

    OP_LOG_AND  desplazar e ir al estado 50
    OP_LOG_OR   desplazar e ir al estado 51

    $default  reduce usando la regla 27 (condicion)


estado 36

   30 comparacion: expresion . comparador expresion
   35 expresion: expresion . OP_SUMA termino
   36          | expresion . OP_RESTA termino
   44 factor: expresion .

    OP_SUMA         desplazar e ir al estado 52
    OP_RESTA        desplazar e ir al estado 53
    OP_MAYOR        desplazar e ir al estado 54
    OP_MAYOR_IGUAL  desplazar e ir al estado 55
    OP_MENOR        desplazar e ir al estado 56
    OP_MENOR_IGUAL  desplazar e ir al estado 57
    OP_DISTINTO     desplazar e ir al estado 58
    OP_IGUAL_IGUAL  desplazar e ir al estado 59

    OP_SUMA         [reduce usando la regla 44 (factor)]
    OP_RESTA        [reduce usando la regla 44 (factor)]
    OP_MAYOR        [reduce usando la regla 44 (factor)]
    OP_MAYOR_IGUAL  [reduce usando la regla 44 (factor)]
    OP_MENOR        [reduce usando la regla 44 (factor)]
    OP_MENOR_IGUAL  [reduce usando la regla 44 (factor)]
    OP_DISTINTO     [reduce usando la regla 44 (factor)]
    OP_IGUAL_IGUAL  [reduce usando la regla 44 (factor)]
    $default        reduce usando la regla 44 (factor)

    comparador  ir al estado 60


estado 37

   34 expresion: termino .
   38 termino: termino . OP_DIV factor
   39        | termino . OP_MUL factor

    OP_MUL  desplazar e ir al estado 61
    OP_DIV  desplazar e ir al estado 62

    OP_MUL    [reduce usando la regla 34 (expresion)]
    OP_DIV    [reduce usando la regla 34 (expresion)]
    $default  reduce usando la regla 34 (expresion)


estado 38

   37 termino: factor .

    $default  reduce usando la regla 37 (termino)


estado 39

   32 iteracion: PR_WHILE condicion . PR_BEGIN lista_sentencias PR_END

    PR_BEGIN  desplazar e ir al estado 63


estado 40

    0 $accept: pgm $end .

    $default  aceptar


estado 41

    4 programa: sentencia lista_sentencias .

    $default  reduce usando la regla 4 (programa)


estado 42

   33 asignacion: TOKEN_ID OP_IGUAL expresion .
   35 expresion: expresion . OP_SUMA termino
   36          | expresion . OP_RESTA termino
   44 factor: expresion .

    OP_SUMA   desplazar e ir al estado 52
    OP_RESTA  desplazar e ir al estado 53

    $end        reduce usando la regla 33 (asignacion)
    $end        [reduce usando la regla 44 (factor)]
    TOKEN_ID    reduce usando la regla 33 (asignacion)
    TOKEN_ID    [reduce usando la regla 44 (factor)]
    PR_IGUALES  reduce usando la regla 33 (asignacion)
    PR_IGUALES  [reduce usando la regla 44 (factor)]
    PR_FILTER   reduce usando la regla 33 (asignacion)
    PR_FILTER   [reduce usando la regla 44 (factor)]
    PR_WRITE    reduce usando la regla 33 (asignacion)
    PR_WRITE    [reduce usando la regla 44 (factor)]
    PR_READ     reduce usando la regla 33 (asignacion)
    PR_READ     [reduce usando la regla 44 (factor)]
    PR_IF       reduce usando la regla 33 (asignacion)
    PR_IF       [reduce usando la regla 44 (factor)]
    PR_ENDIF    reduce usando la regla 33 (asignacion)
    PR_ENDIF    [reduce usando la regla 44 (factor)]
    PR_ELSE     reduce usando la regla 33 (asignacion)
    PR_ELSE     [reduce usando la regla 44 (factor)]
    PR_WHILE    reduce usando la regla 33 (asignacion)
    PR_WHILE    [reduce usando la regla 44 (factor)]
    PR_END      reduce usando la regla 33 (asignacion)
    PR_END      [reduce usando la regla 44 (factor)]
    OP_SUMA     [reduce usando la regla 44 (factor)]
    OP_RESTA    [reduce usando la regla 44 (factor)]
    OP_MUL      reduce usando la regla 44 (factor)
    OP_DIV      reduce usando la regla 44 (factor)
    $default    reduce usando la regla 33 (asignacion)


estado 43

   45 declaracion_variables: OP_DIM . COR_ABRE lista_variables_tipos COR_CIERRA

    COR_ABRE  desplazar e ir al estado 64


estado 44

    2 programa: PR_MAIN PR_DIM declaracion_variables . PR_ENDIM lista_sentencias

    PR_ENDIM  desplazar e ir al estado 65


estado 45

    7 lista_sentencias: sentencia lista_sentencias .

    $default  reduce usando la regla 7 (lista_sentencias)


estado 46

   14 iguales: PR_IGUALES PAR_ABRE expresion . COMA COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA
   35 expresion: expresion . OP_SUMA termino
   36          | expresion . OP_RESTA termino
   44 factor: expresion .

    COMA      desplazar e ir al estado 66
    OP_SUMA   desplazar e ir al estado 52
    OP_RESTA  desplazar e ir al estado 53

    COMA      [reduce usando la regla 44 (factor)]
    OP_SUMA   [reduce usando la regla 44 (factor)]
    OP_RESTA  [reduce usando la regla 44 (factor)]
    $default  reduce usando la regla 44 (factor)


estado 47

   17 filter: PR_FILTER PAR_ABRE condicion . COMA COR_ABRE lista_variables COR_CIERRA PAR_CIERRA

    COMA  desplazar e ir al estado 67


estado 48

   31 comparacion: PR_NOT expresion .
   35 expresion: expresion . OP_SUMA termino
   36          | expresion . OP_RESTA termino
   44 factor: expresion .

    OP_SUMA   desplazar e ir al estado 52
    OP_RESTA  desplazar e ir al estado 53

    PR_THEN     reduce usando la regla 31 (comparacion)
    PR_THEN     [reduce usando la regla 44 (factor)]
    PR_BEGIN    reduce usando la regla 31 (comparacion)
    PR_BEGIN    [reduce usando la regla 44 (factor)]
    COMA        reduce usando la regla 31 (comparacion)
    COMA        [reduce usando la regla 44 (factor)]
    OP_LOG_AND  reduce usando la regla 31 (comparacion)
    OP_LOG_AND  [reduce usando la regla 44 (factor)]
    OP_LOG_OR   reduce usando la regla 31 (comparacion)
    OP_LOG_OR   [reduce usando la regla 44 (factor)]
    OP_SUMA     [reduce usando la regla 44 (factor)]
    OP_RESTA    [reduce usando la regla 44 (factor)]
    OP_MUL      reduce usando la regla 44 (factor)
    OP_DIV      reduce usando la regla 44 (factor)
    $default    reduce usando la regla 31 (comparacion)


estado 49

   25 condicional: PR_IF condicion PR_THEN . lista_sentencias PR_ENDIF
   26            | PR_IF condicion PR_THEN . lista_sentencias PR_ELSE lista_sentencias PR_ENDIF

    TOKEN_ID    desplazar e ir al estado 1
    PR_IGUALES  desplazar e ir al estado 3
    PR_FILTER   desplazar e ir al estado 4
    PR_WRITE    desplazar e ir al estado 5
    PR_READ     desplazar e ir al estado 6
    PR_IF       desplazar e ir al estado 7
    PR_WHILE    desplazar e ir al estado 8

    lista_sentencias  ir al estado 68
    sentencia         ir al estado 23
    iguales           ir al estado 12
    filter            ir al estado 13
    io                ir al estado 14
    entrada           ir al estado 15
    salida            ir al estado 16
    condicional       ir al estado 17
    iteracion         ir al estado 18
    asignacion        ir al estado 19


estado 50

   28 condicion: comparacion OP_LOG_AND . comparacion

    TOKEN_ID     desplazar e ir al estado 29
    CONST_INT    desplazar e ir al estado 30
    CONST_STR    desplazar e ir al estado 31
    CONST_FLOAT  desplazar e ir al estado 32
    PR_NOT       desplazar e ir al estado 33

    comparacion  ir al estado 69
    expresion    ir al estado 36
    termino      ir al estado 37
    factor       ir al estado 38


estado 51

   29 condicion: comparacion OP_LOG_OR . comparacion

    TOKEN_ID     desplazar e ir al estado 29
    CONST_INT    desplazar e ir al estado 30
    CONST_STR    desplazar e ir al estado 31
    CONST_FLOAT  desplazar e ir al estado 32
    PR_NOT       desplazar e ir al estado 33

    comparacion  ir al estado 70
    expresion    ir al estado 36
    termino      ir al estado 37
    factor       ir al estado 38


estado 52

   35 expresion: expresion OP_SUMA . termino

    TOKEN_ID     desplazar e ir al estado 29
    CONST_INT    desplazar e ir al estado 30
    CONST_STR    desplazar e ir al estado 31
    CONST_FLOAT  desplazar e ir al estado 32

    expresion  ir al estado 71
    termino    ir al estado 72
    factor     ir al estado 38


estado 53

   36 expresion: expresion OP_RESTA . termino

    TOKEN_ID     desplazar e ir al estado 29
    CONST_INT    desplazar e ir al estado 30
    CONST_STR    desplazar e ir al estado 31
    CONST_FLOAT  desplazar e ir al estado 32

    expresion  ir al estado 71
    termino    ir al estado 73
    factor     ir al estado 38


estado 54

   53 comparador: OP_MAYOR .

    $default  reduce usando la regla 53 (comparador)


estado 55

   56 comparador: OP_MAYOR_IGUAL .

    $default  reduce usando la regla 56 (comparador)


estado 56

   54 comparador: OP_MENOR .

    $default  reduce usando la regla 54 (comparador)


estado 57

   55 comparador: OP_MENOR_IGUAL .

    $default  reduce usando la regla 55 (comparador)


estado 58

   58 comparador: OP_DISTINTO .

    $default  reduce usando la regla 58 (comparador)


estado 59

   57 comparador: OP_IGUAL_IGUAL .

    $default  reduce usando la regla 57 (comparador)


estado 60

   30 comparacion: expresion comparador . expresion

    TOKEN_ID     desplazar e ir al estado 29
    CONST_INT    desplazar e ir al estado 30
    CONST_STR    desplazar e ir al estado 31
    CONST_FLOAT  desplazar e ir al estado 32

    expresion  ir al estado 74
    termino    ir al estado 37
    factor     ir al estado 38


estado 61

   39 termino: termino OP_MUL . factor

    TOKEN_ID     desplazar e ir al estado 29
    CONST_INT    desplazar e ir al estado 30
    CONST_STR    desplazar e ir al estado 31
    CONST_FLOAT  desplazar e ir al estado 32

    expresion  ir al estado 71
    termino    ir al estado 37
    factor     ir al estado 75


estado 62

   38 termino: termino OP_DIV . factor

    TOKEN_ID     desplazar e ir al estado 29
    CONST_INT    desplazar e ir al estado 30
    CONST_STR    desplazar e ir al estado 31
    CONST_FLOAT  desplazar e ir al estado 32

    expresion  ir al estado 71
    termino    ir al estado 37
    factor     ir al estado 76


estado 63

   32 iteracion: PR_WHILE condicion PR_BEGIN . lista_sentencias PR_END

    TOKEN_ID    desplazar e ir al estado 1
    PR_IGUALES  desplazar e ir al estado 3
    PR_FILTER   desplazar e ir al estado 4
    PR_WRITE    desplazar e ir al estado 5
    PR_READ     desplazar e ir al estado 6
    PR_IF       desplazar e ir al estado 7
    PR_WHILE    desplazar e ir al estado 8

    lista_sentencias  ir al estado 77
    sentencia         ir al estado 23
    iguales           ir al estado 12
    filter            ir al estado 13
    io                ir al estado 14
    entrada           ir al estado 15
    salida            ir al estado 16
    condicional       ir al estado 17
    iteracion         ir al estado 18
    asignacion        ir al estado 19


estado 64

   45 declaracion_variables: OP_DIM COR_ABRE . lista_variables_tipos COR_CIERRA

    TOKEN_ID  desplazar e ir al estado 78

    lista_variables_tipos  ir al estado 79


estado 65

    2 programa: PR_MAIN PR_DIM declaracion_variables PR_ENDIM . lista_sentencias

    TOKEN_ID    desplazar e ir al estado 1
    PR_IGUALES  desplazar e ir al estado 3
    PR_FILTER   desplazar e ir al estado 4
    PR_WRITE    desplazar e ir al estado 5
    PR_READ     desplazar e ir al estado 6
    PR_IF       desplazar e ir al estado 7
    PR_WHILE    desplazar e ir al estado 8

    lista_sentencias  ir al estado 80
    sentencia         ir al estado 23
    iguales           ir al estado 12
    filter            ir al estado 13
    io                ir al estado 14
    entrada           ir al estado 15
    salida            ir al estado 16
    condicional       ir al estado 17
    iteracion         ir al estado 18
    asignacion        ir al estado 19


estado 66

   14 iguales: PR_IGUALES PAR_ABRE expresion COMA . COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA

    COR_ABRE  desplazar e ir al estado 81


estado 67

   17 filter: PR_FILTER PAR_ABRE condicion COMA . COR_ABRE lista_variables COR_CIERRA PAR_CIERRA

    COR_ABRE  desplazar e ir al estado 82


estado 68

   25 condicional: PR_IF condicion PR_THEN lista_sentencias . PR_ENDIF
   26            | PR_IF condicion PR_THEN lista_sentencias . PR_ELSE lista_sentencias PR_ENDIF

    PR_ENDIF  desplazar e ir al estado 83
    PR_ELSE   desplazar e ir al estado 84


estado 69

   28 condicion: comparacion OP_LOG_AND comparacion .

    $default  reduce usando la regla 28 (condicion)


estado 70

   29 condicion: comparacion OP_LOG_OR comparacion .

    $default  reduce usando la regla 29 (condicion)


estado 71

   35 expresion: expresion . OP_SUMA termino
   36          | expresion . OP_RESTA termino
   44 factor: expresion .

    OP_SUMA   desplazar e ir al estado 52
    OP_RESTA  desplazar e ir al estado 53

    OP_SUMA   [reduce usando la regla 44 (factor)]
    OP_RESTA  [reduce usando la regla 44 (factor)]
    $default  reduce usando la regla 44 (factor)


estado 72

   34 expresion: termino .
   35          | expresion OP_SUMA termino .
   38 termino: termino . OP_DIV factor
   39        | termino . OP_MUL factor

    OP_MUL  desplazar e ir al estado 61
    OP_DIV  desplazar e ir al estado 62
